# m3ta

./: .gitignore  CHANGES  CMakeLists.txt  LICENSE  README.rst
cmake/: tests.cmake
doc/: Makefile  arithmeticoperationresult.rst  concatenateintegersequences.rst  conf.py  contributing.rst  examples.rst  faq.rst  index.rst  integersequence.rst  iscomplex.rst  make.bat  overview.rst  popintegersequence.rst  product.rst  readonlyparameter.rst  reference.rst  removequalifiers.rst  reverseintegersequence.rst
doc/m3ta/: all.rst  any.rst  at.rst  back.rst  concatenate.rst  concatenateintegersequences.rst  dependentbool.rst  endingoccurrences.rst  extractintegersequence.rst  front.rst  integersequence.rst  isoperatorcallable.rst  maximum.rst  minimum.rst  nestedinitializerlists.rst  none.rst  parameterpack.rst  pass.rst  popback.rst  popfront.rst  popintegersequence.rst  power.rst  reverse.rst  reverseintegersequence.rst
include/m3ta/: all  any  arithmeticoperationresult  at  back  concatenate  concatenateintegersequences  dependentbool  endingoccurrences  extractintegersequence  front  integersequence  iscomplex  isoperatorcallable  m3ta  maximum  minimum  nestedinitializerlists  none  parameterpack  pass  popback  popfront  popintegersequence  power  product  readonlyparameter  removequalifiers  reverse  reverseintegersequence
src/m3ta/: all.h  any.h  arithmeticoperationresult.h  at.h  back.h  concatenate.h  concatenateintegersequences.h  dependentbool.h  endingoccurrences.h  extractintegersequence.h  (+19 more)
tests/: CMakeLists.txt  assert.h  messages.h  operators.h  typename.h
(+29 files in other folders)
